--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-tle></head><body><h1>Hello, GitHub!</h1></body></html>" 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My GitHub Page</title>
+</head>
+<body>
+    <h1>Hello, GitHub!</h1>
+</body>
+</html>
